Various enhancement, due to answering results of the (great) FindBugs tool
git-svn-id: https://jupload.svn.sourceforge.net/svnroot/jupload/trunk@818 35eed6a1-492f-0410-aaa5-912e50059252